Clean code and pre-end backend