@@ -1,12 +1,8 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
-
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.1'
     id 'io.spring.dependency-management' version '1.1.7'
 }
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'riservi-ms'
 version = '1.3'
@@ -16,9 +12,8 @@ repositories {
 }
 
 dependencies {
-
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // Dependencias de JSP y servidor embebido Tomcat
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
@@ -29,29 +24,34 @@ dependencies {
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-////// remove for errors with lombok
-    implementation('org.projectlombok:lombok:1.18.36')
+    // Dependencias de Lombok
+    implementation 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
+    // Dependencias de Log4j
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
-//////
+    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.17.1'
+
+    // Dependencia de MySQL
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.1.0'
 
+    // Dependencias de pruebas
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Incluye JUnit 5
+    testImplementation 'org.mockito:mockito-core:5.8.0'  // Para pruebas unitarias con Mockito
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0' // Integración con JUnit 5
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs = ['-XX:+EnableDynamicAgentLoading']
 }
-
-apply plugin: 'io.spring.dependency-management'
 
 dependencyManagement {
     imports {
-        mavenBom SpringBootPlugin.BOM_COORDINATES
+        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.4.1'
     }
 }
